--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
         </ul>
       </div>
     </div>
+    <div class="footer">
+      <a href="https://github.com/hexadecimalya/my-weather-widget"
+        >Open-source code</a
+      >
+      by Alina Pantina
+    </div>
     <script src="src/script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
