--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@
           placeholder="Type any city..."
         />
       </form>
-      <button id="current-position" class="current-location">
-        📍Set current location
-      </button>
+      <div class="wrapper">
+        <button id="current-position" class="current-location">
+          📍Set current location
+        </button>
+      </div>
       <div class="row">
         <div class="col weather-active-tab">
           <div class="row mb-2">
             <div id="current-city" class="h1 col-6 mt-3 text-wrap"></div>
-            <div id="current-datetime" class="h2 mt-4 col-6"></div>
+            <div id="current-datetime" class="h3 mt-4 col-6"></div>
           </div>
           <div class="row">
             <div class="col">
@@ -60,21 +62,19 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
-              <!-- <img src="img/sun.png" alt="" width="150px" /> -->
-            </div>
+            <div class="col-4" id="image-weather-main"></div>
           </div>
         </div>
-      </div>
-      <div class="row">
-        <ul class="navigation-tabs">
-          <a class="nvg-link" aria-current="page" href="#">☀️ Today</a>
-          <a class="nvg-link" href="#">🌥 Day 2</a>
-          <a class="nvg-link" href="#">🌨 Day 3</a>
-          <a class="nvg-link" href="#">🌨 Day 4</a>
-          <a class="nvg-link" href="#">☀️Day 5</a>
-          <a class="nvg-link" href="#">⛅️ Day 6</a>
-        </ul>
+        <div class="row">
+          <ul class="navigation-tabs">
+            <a class="nvg-link" aria-current="page" href="#">☀️ Today</a>
+            <a class="nvg-link" href="#">🌥 Day 2</a>
+            <a class="nvg-link" href="#">🌨 Day 3</a>
+            <a class="nvg-link" href="#">🌨 Day 4</a>
+            <a class="nvg-link" href="#">☀️Day 5</a>
+            <a class="nvg-link" href="#">⛅️ Day 6</a>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="footer">
