--- a/index.html
+++ b/index.html
@@ -63,16 +63,8 @@
         </div>
       </div>
       <hr />
-      <div class="row">
-        <ul class="navigation-tabs">
-          <a class="nvg-link" aria-current="page" href="#">☀️ Today</a>
-          <a class="nvg-link" href="#">🌥 Day 2</a>
-          <a class="nvg-link" href="#">🌨 Day 3</a>
-          <a class="nvg-link" href="#">🌨 Day 4</a>
-          <a class="nvg-link" href="#">☀️Day 5</a>
-          <a class="nvg-link" href="#">⛅️ Day 6</a>
-        </ul>
-      </div>
+    <div class="forecast-block" id="forecast">
+    </div>
     </div>
     <div class="footer">
       <a href="https://github.com/hexadecimalya/my-weather-widget"
