Almost finalized, deleted F conversion

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div class="container main-widget shadow p-3 mb-5 bg-body rounded">
+    <div class="container main-widget shadow p-3 mb-5 rounded">
       <div class="wrapper">
         <button id="current-position" class="current-location">
           📍Set current location
@@ -48,8 +48,7 @@
         <div class="row">
           <div class="col-5 daily-temp">
             <span id="current-temp"></span><a id="celsius-link" href="#"> °C</a
-            ><span class="separating-pipe">|</span
-            ><a id="farenheit-link" href="#">°F</a>
+            >
             <p id="weather-description" class="weather-description"></p>
           </div>
           <div class="col-2 text-center" id="image-weather-main"></div>
