--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div class="container main-widget shadow p-3 mb-5 rounded">
+    <div class="container main-widget shadow p-3 mb-2 rounded">
       <div class="wrapper">
         <button id="current-position" class="current-location">
           📍Set current location
@@ -43,16 +43,16 @@
             id="current-city"
             class="h1 col-6 mt-3 text-wrap current-city"
           ></div>
-          <div id="current-datetime" class="h4 mt-4 col-6 text-end"></div>
+          <div id="current-datetime" class="h4 mt-4 col-6 text-end datetime"></div>
         </div>
         <div class="row">
-          <div class="col-5 daily-temp">
+          <div class="col-4 col-sm-3 daily-temp">
             <span id="current-temp"></span><a id="celsius-link" href="#"> °C</a
             >
             <p id="weather-description" class="weather-description"></p>
           </div>
-          <div class="col-2 text-center" id="image-weather-main"></div>
-          <div class="col-5 pt-0 mb-2">
+          <div class="col-3 col-sm-5 text-center col-sm-4" id="image-weather-main"></div>
+          <div class="col-5 col-sm-4 pt-0 mb-2">
             <ul class="forecast-parameters text-end">
               <li>humidity: <span id="humidity"></span>%</li>
               <li>pressure: <span id="pressure"></span> hPa</li>
